--- a/assets/css/menu/menu-link.css
+++ b/assets/css/menu/menu-link.css
@@ -1,15 +1,15 @@
-.menu-link  {
+.menu__link  {
     text-decoration: none;
     color: #808080;
     margin-right: 1.25rem;
     text-transform: lowercase;
 }
 
-.menu-link:hover {
+.menu__link:hover {
     text-decoration: underline;
 }
 
-.menu-link.ativo {
+.menu__link.ativo {
     color: #333333;
     font-weight: bold;
 }
