--- a/assets/css/banner/banner-titulo.css
+++ b/assets/css/banner/banner-titulo.css
@@ -1,7 +1,6 @@
 .banner__titulo {
     font-family: 'Pacifico', cursive;
     color: #FDFDFD;
-    font-size: 5.0625rem;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -11,3 +10,15 @@
     width: 100%;
 }
 
+
+@media screen and (min-width: 0) {
+    .banner__titulo {
+        font-size: 3rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .banner__titulo {
+        font-size: 5.0625rem;
+    }
+}
