--- a/assets/css/pessoa/pessoa.css
+++ b/assets/css/pessoa/pessoa.css
@@ -2,3 +2,15 @@
     display: flex;
     flex-direction: column;
 }
+
+@media screen and (min-width: 0px) {
+    .pessoa {
+        margin-bottom: 2rem;
+    }
+}
+
+@media screen and (min-width: 762px) {
+    .pessoa {
+        margin-bottom: 0;
+    }
+}
