--- a/assets/css/pessoas.css
+++ b/assets/css/pessoas.css
@@ -3,3 +3,15 @@
     justify-content: space-around;
     padding-top: 3rem;
 }
+
+@media screen and (min-width: 0px) {
+    .pessoas {
+        flex-direction: column;
+    }
+}
+
+@media screen and (min-width: 762px) {
+    .pessoas {
+        flex-direction: row;
+    }
+}
