--- a/assets/css/sobre/sobre-descricao.css
+++ b/assets/css/sobre/sobre-descricao.css
@@ -1,7 +1,18 @@
 .sobre__descricao {
     color: #8C8888;
     font-family: 'Roboto', sans-serif;
-    font-size: 1.75rem;
     font-weight: 100;
     font-weight: 300;
+}
+
+@media screen and (min-width: 0px) {
+    .sobre__descricao {
+        font-size: 1.3rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .sobre__descricao {
+        font-size: 1.75rem;
+    }
 }
