--- a/assets/css/sobre/sobre-titulo.css
+++ b/assets/css/sobre/sobre-titulo.css
@@ -1,6 +1,17 @@
 .sobre__titulo {
     font-family: 'Pacifico', cursive;
     color: #8D0606;
-    font-size: 3.1875rem;
     font-weight: 400;
+}
+
+@media screen and (min-width: 0px) {
+    .sobre__titulo {
+        font-size: 2rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .sobre__titulo {
+        font-size: 3.1875rem;
+    }
 }
